# hamoru

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.claude/: settings.json
.claude/agents/: evaluator.md
.claude/commands/: hamoru-eval.md  implement.md  phase-plan.md  review-claude-config.md  review-config.md  review-phase.md  write-adr.md
.claude/hooks/: block-destructive-git.sh  block-secrets-edit.sh
.claude/rules/: architecture.md  design-decisions.md  provider.md
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
crates/hamoru-cli/: Cargo.toml
crates/hamoru-cli/src/: main.rs
crates/hamoru-cli/src/server/: auth.rs  mod.rs  rate_limit.rs
crates/hamoru-core/: Cargo.toml
crates/hamoru-core/src/: error.rs  lib.rs
crates/hamoru-core/src/agents/: mod.rs
crates/hamoru-core/src/config/: mod.rs
crates/hamoru-core/src/orchestrator/: condition.rs  config.rs  context.rs  dag.rs  engine.rs  mod.rs
crates/hamoru-core/src/policy/: config.rs  engine.rs  mod.rs  scoring.rs
crates/hamoru-core/src/provider/: anthropic.rs  catalog.rs  factory.rs  http.rs  mock.rs  mod.rs  ollama.rs  retry.rs  types.rs
crates/hamoru-core/src/server/: mod.rs  namespace.rs  translate.rs  types.rs
crates/hamoru-core/src/telemetry/: json_file.rs  memory.rs  mod.rs  projection.rs  sqlite.rs
docs/: design-plan.md  launch-plan.md
docs/decisions/: 000-why-hamoru.md  001-architecture-overview.md  002-tool-execution-boundary.md  003-provider-abstraction-design.md  004-telemetry-sqlite-migration.md  005-policy-engine-design.md  006-orchestration-engine-design.md  007-agent-framework-integration-design.md  008-api-server-crate-placement.md  009-parallel-execution-design.md  010-api-server-hardening.md  010-reasoning-budget-control.md  011-api-server-hardening.md
docs/research/: 001-agentteams-trial.md
scripts/: smoke-test.sh
