[package]
name = "hamoru-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
hamoru-core = { path = "../hamoru-core" }
chrono = { version = "0.4.20", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde_json = "1"
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
hamoru-core = { path = "../hamoru-core", features = ["test-utils"] }
