[package]
name = "hamoru-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "hamoru"
path = "src/main.rs"

[dependencies]
hamoru-core = { path = "../hamoru-core" }
axum = "0.8"
chrono = { version = "0.4.20", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
hamoru-core = { path = "../hamoru-core", features = ["test-utils"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tower = { version = "0.5", features = ["util"] }
