[package]
name = "hamoru-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-utils = []

[dependencies]
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
futures-core = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "time", "fs", "rt"] }
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "test-util"] }
